# adk-and-mcp

./: .env-example  README.md  pyproject.toml
GPT-JobHunter/: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  README.md
GPT-JobHunter/backend/: Dockerfile  requirements.txt
GPT-JobHunter/backend/app/: __init__.py  config.py  main.py
GPT-JobHunter/backend/app/models/: schemas.py
GPT-JobHunter/frontend/: Dockerfile  app.py  requirements.txt
GPT-JobHunter/scripts/: setup-dev.sh  start.sh
ai_health_assistant/: agent.py
custom_workflow_agent/: agent.py
custom_workflow_agent/architecture/: architecture.puml
custom_workflow_agent/subagents/: critic.py  grammar_check.py  reviser.py  story_generator.py  tone_check.py
loop_agent_writer_critic/: agent.py
mcp_agent_filesystem/: agent.py
mcp_agent_google_maps/: agent.py
software_architect/: agent.py
weather_agent_anthropic/: agent.py
weather_agent_gemini/: __init__.py  weather_agent_gemini.py
weather_agent_openai/: agent.py  weather_tests.evalset.json
weather_multi_agents/: agent.py
weather_multi_agents_w_state/: agent.py
