[tool.poetry]
name = "ai-health-assistant"
version = "0.1.0"
description = ""
authors = ["JJ <4843736+espin086@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
google-adk = ">=1.0.0,<2.0.0"
litellm = "^1.71.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
